Commited new changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Github</a></li>
             </ul>
+            <div class="hero">
+                <h2>I'm Nasara Friday</h2>
+                <br>
+                <p>A Software Engineer, still learning hard, with the knowlegde of UI designs. An Under Graduate ( NO UNIVERISTY YET )</p>
+                <button class="btn">Work Experience</button>
+            </div>
         </div>
+        
     </div>
 </body>
 </html>
