--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <ul>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Youtube</a></li>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Github</a></li>
+            <ul class="icons">
+                <li><a href="#"><ion-icon name="twitter"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="yuotube"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="linkedin"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="instagram"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="github"></ion-icon></a></li>
             </ul>
             <div class="hero">
                 <h2>I'm Nasara Friday</h2>
@@ -25,5 +25,6 @@
         </div>
         
     </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
