--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/551daa25a1.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <div class="container">
         <div class="navbar">
             <ul class="icons">
-                <li><a href="#"><ion-icon name="twitter"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="yuotube"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="linkedin"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="instagram"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="github"></ion-icon></a></li>
+                <li><a href="https://x.com/crescentf0real/"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                <li><a href="https://instagram.com/crescentforeal/"><i class="fa-brands fa-square-instagram"></i></a></li>
+                <li><a href="https://youtube.com/crescentforeal/"><i class="fa-brands fa-square-youtube"></i></a></li>
+                <li><a href="https://github.com/crescent4real/"><i class="fa-brands fa-square-github"></i></a></li>
+                <li><a href="https://linkedin.com/crescentforeal/"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
             <div class="hero">
                 <h2>I'm Nasara Friday</h2>
@@ -25,6 +26,6 @@
         </div>
         
     </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+
 </body>
 </html>
