Added Paragraphs Of Texts

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li><a href="https://linkedin.com/crescentforeal/"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
             <div class="hero">
-                <h2>I'm Nasara Friday</h2>
+                <h2>Hey <br>I'm Nasara</h2>
                 <br>
-                <p>A Software Engineer, still learning hard, with the knowlegde of UI designs. An Under Graduate ( NO UNIVERISTY YET )</p>
+                <p>-Aspiring Front-End Engineer And UI Design With 1+ years of Experience. <span>Working so hard in an early-stage to build brands and tech companies into greatness</span></p>
                 <button class="btn">Work Experience</button>
             </div>
         </div>
