--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                 <br>
                 <p>-Aspiring Front-End Engineer And UI Design With 1+ years of Experience. <span>Working so hard in an early-stage to build brands and tech companies into greatness</span></p>
                 <button class="btn">Work Experience</button>
+                <br>
+                <br>
+                <br>
+                <div class="btn2">
+                    <a href="#">Front-End Engineering</a>
+                    <a href="#">UI Design</a>
+                    <a href="#">Cybersecurity Advocate</a>
+                </div>
             </div>
         </div>
         
